@@ -1,4 +1,4 @@
-.TH SDPARM "8" "November 2007" "sdparm\-1.03" SDPARM
+.TH SDPARM "8" "January 2008" "sdparm\-1.03" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
@@ -671,7 +671,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2005\-2007 Douglas Gilbert
+Copyright \(co 2005\-2008 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
